# Foxy-4-Web-Server

./: .gitignore  CMakeLists.txt  README.md  run_server.sh
certs/: copy_cert.sh  foxy.key  foxy_cert.crt
config/: nginx.conf  nginx_relative.conf  proxy_nginx.conf  proxy_ngnix.conf
config-docker/: nginx.conf
data/: fox.json  index 2.html  index.html  login.css
docker/: Dockerfile  base.Dockerfile  cloudbuild.yaml  coverage.Dockerfile
include/: config.h  config_parser.h  config_statement.h  cookie.h  data_collector.h  database.h  echo_request_handler.h  header.h  health_request_handler.h  http_server.h  http_session.h  login_request_handler.h  mime_types.h  not_found_request_handler.h  password.h  proxy_request_handler.h  reply.h  request.h  request_handler.h  request_handler_generator.h  request_parser.h  response.h  response_generator.h  server.h  session.h  static_request_handler.h  status_request_handler.h  utility.h
login/: index.html  login_failure.html  login_success.html
login/signup/: index.html  signup_failure.html  signup_success.html
src/: config.cc  config_parser.cc  config_statement.cc  cookie.cc  data_collector.cc  database.cc  echo_request_handler.cc  health_request_handler.cc  http_server.cc  http_session.cc  login_request_handler.cc  mime_types.cc  not_found_request_handler.cc  password.cc  proxy_request_handler.cc  reply.cc  request_handler.cc  request_handler_generator.cc  request_parser.cc  response.cc  response_generator.cc  server.cc  server_main.cc  session.cc  static_request_handler.cc  status_request_handler.cc  utility.cc
tests/: integration.conf  output.txt  prox_integration.conf  test1.conf  test2.conf
tests/GetPort/: GetPort_test.cc  simple_config
tests/config/: ToString  bad_server_block  block  config_test.cc  example_config  invalid_port  invalid_port_statement_after  invalid_port_statement_before  invalid_port_statement_between  no_port _num  simple_config
tests/config_parser/: config_parser_test.cc  doublequoteerror  doublesemi  extrabracket_end  extrabracket_start  nested  nestedempty  quoteerror  singlequote  whitespace
tests/data_collector/: data_collector_test.cc  data_collector_test.cc~
tests/echo_request_handler/: echo_request_handler_test.cc
tests/health_request_handler/: health_request_handler_test.cc
tests/integration/: integration.sh  integration_config.sh  proxy_ans.txt  proxy_integration_test
tests/login_request_handler/: login_request_handler_test.cc
tests/login_request_handler/test_data/: index.html  login_success.html
tests/login_request_handler/test_data/signup/: signup_failure.html
tests/not_found_request_handler/: not_found_request_handler_test.cc
tests/password/: password_test.cc
tests/proxy_request_handler/: proxy_request_handler_test.cc  proxy_test.conf
tests/reply_message/: reply_message_test.cc
tests/request/: request_test.cc
tests/request_handler/: request_handler_test.cc
tests/request_handler_generator/: request_handler_generator_test.cc
tests/request_handler_generator/test_config/: example_config
tests/request_parser/: request_parser_test.cc
tests/response_generator/: response_generator_test.cc
tests/response_message/: response_message_test.cc  response_message_test.cc~
tests/static_request_handler/: static_request_handler_test.cc
tests/static_request_handler/test_data/: fox.txt  foxes.tar  index.html
tests/status_request_handler/: status_request_handler_test.cc  status_request_handler_test.cc~
